--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -31,6 +31,7 @@
 
 .portfolio-logo {
   background: url('../img/logo.png') 50% no-repeat;
+  background-image: url(../img/logo.png);
   background-size: cover;
   height: 75px;
   width: 280px;
