--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,7 +1,11 @@
+body
+{
+  background-image: url(../img/background.jpg);
+}
+
 .portfolio-header {
   position: relative;
-  /*background-image: url('../img/header-bg.jpg');*/
-  background-color: white;
+  background-color: transparent;
 }
 
 .portfolio-header .mdl-layout__header-row {
@@ -12,6 +16,7 @@
 }
 
 .mdl-layout__title {
+  color:white;
   font-size: 14px;
   text-align: center;
   font-weight: 300;
@@ -26,7 +31,7 @@
 }
 
 .is-compact .portfolio-logo-row {
-  min-height: auto;
+  min-height: 40px;
 }
 
 .portfolio-logo {
@@ -64,7 +69,8 @@
 }
 
 .portfolio-header .mdl-layout__drawer-button {
-    background-color: rgba(197, 197, 197, 0.44);
+    border-radius: 5px;
+    background-color: rgba(197, 197, 197, 1);
 }
 
 .portfolio-navigation-row .is-active {
@@ -120,6 +126,12 @@ img.article-image {
   margin: auto;
 }
 
+.doa {
+  background: white;
+  max-width: 900px;
+  margin: auto;
+}
+
 .portfolio-copy {
   max-width: 700px;
 }
@@ -165,8 +177,16 @@ img.article-image {
   margin: auto;
 }
 
+.mdl-layout__header--waterfall.is-casting-shadow {
+    box-shadow: none;
+}
+
 footer {
   background-image: url('../img/footer-background.png');
   background-size: cover;
 }
 
+.mdl-list__item-primary-content a
+{
+  color:white;
+}
