--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,6 +1,6 @@
 body
 {
-  background-image: url(../img/background.jpg);
+  background-image: url('../img/background.jpg');
 }
 
 .portfolio-header {
@@ -36,7 +36,7 @@ body
 
 .portfolio-logo {
   background: url('../img/logo.png') 50% no-repeat;
-  background-image: url(../img/logo.png);
+  background-image: url('../img/logo.png');
   background-size: cover;
   height: 75px;
   width: 280px;
