--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -190,3 +190,23 @@ footer {
 {
   color:white;
 }
+
+.back-button
+{
+    position: absolute; top: 2%;    
+    right: 3%; 
+    color: white;
+    background: rgba(255,255,255,0.5);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    z-index: 99;
+}
+
+.back-button-i
+{
+    position: absolute;
+    top: 13px;
+    left: 13px; 
+    z-index: 99;
+}
