--- a/www/css/compass.css
+++ b/www/css/compass.css
@@ -22,8 +22,8 @@
     width:200px;
     height:200px;
     z-index:1000;
-    top:60px;
-    left:28%;
+    top: 1%;
+    left: 16.5%;
     -webkit-transform:translateX(-33px);    
 }
 
