--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -189,6 +189,12 @@ footer {
 .mdl-list__item-primary-content a
 {
   color:white;
+  width : 1080px;
+}
+
+.mdl-list__item:active
+{
+  background-color: rgba(255,255,255,0.5);
 }
 
 .back-button
