--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -234,13 +234,44 @@ footer {
 .menu-bar-2
 {
     background-color: rgb(31, 47, 98);
-    height: 85px;
+    height: 13%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 9999;
     box-shadow: 0 10px 5px rgba(56, 52, 52, 0.58);
+}
+
+.main-padding
+{
+    padding-top: 25%;
+}
+
+.back-button-menu
+{
+    position: absolute;
+    width: 8%;
+    margin-top: 9%;
+    margin-left: 1%;
+}
+
+.label-menu
+{
+    color: white;
+    position: absolute;
+    margin-top: 11.6%;
+    margin-left: 10%;
+    font-size: 12pt;
+    font-weight: 100;
+}
+
+.logo-dreamtour-menu
+{
+    position: absolute;
+    width: 50%;
+    margin-top: 10%;
+    right: 2%;
 }
 
 .logo-box
