--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -248,6 +248,11 @@ footer {
     padding-top: 25%;
 }
 
+.main-padding-2
+{
+    padding-top: 30%;
+}
+
 .back-button-menu
 {
     position: absolute;
