--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -285,3 +285,60 @@ footer {
   margin-bottom: 25px;
   width: 100%;
 }
+
+.box-bottom
+{
+    position: absolute;
+    bottom : 0;
+    left : 0;
+    z-index: 10000;
+    width: 100%;
+    /*height : 50px;*/
+    background-color: #eaeaea;
+    border-top: #464545 solid 1px;
+}
+
+.box-bottom-inside
+{
+    /*height: 107px;*/
+    margin-top: -4px;
+    background-color: white;
+}
+
+.box-bottom-inside-table
+{
+    width: 100%;
+    padding: 14px;
+}
+
+.box-bottom-inside-p
+{
+    margin: 0;
+    font-size: larger;
+    font-weight: 700;
+    color: #1f2f62;
+}
+
+.box-bottom-label-left
+{
+    font-size: larger;
+    margin-top: 13px;
+    margin-left: 15px;
+}
+
+.box-bottom-label-right
+{
+    font-size: larger;
+    font-weight: 700;
+    color: #1f2f62;
+    position: absolute;
+    top: 13px;
+    right: 45px;
+}
+
+.box-bottom-icon-down
+{
+    position: absolute;
+    top: 17px;
+    right: 16px;
+}
