--- a/www/css/style.css
+++ b/www/css/style.css
@@ -393,3 +393,128 @@ display: inline-block;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.logo-dreamtour
+{
+  width: 100%;
+}
+
+.logo-dreamtour1
+{
+    width: 100%;
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 10%;
+}
+
+.menu-bar-2
+{
+    background-color: rgb(31, 47, 98);
+    height: 13%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    box-shadow: 0 10px 5px rgba(56, 52, 52, 0.58);
+}
+
+.main-padding
+{
+    padding-top: 25%;
+}
+
+.main-padding-2
+{
+    padding-top: 30%;
+}
+
+.back-button-menu
+{
+    position: absolute;
+    width: 8%;
+    margin-top: 9%;
+    margin-left: 1%;
+}
+
+.label-menu
+{
+    color: white;
+    position: absolute;
+    margin-top: 11.6%;
+    margin-left: 10%;
+    font-size: 12pt;
+    font-weight: 100;
+}
+
+.logo-dreamtour-menu
+{
+    position: absolute;
+    width: 50%;
+    margin-top: 10%;
+    right: 2%;
+}
+
+.logo-box
+{
+  margin-top: 55px;
+  margin-bottom: 25px;
+  width: 100%;
+}
+
+.box-bottom
+{
+    position: absolute;
+    bottom : 0;
+    left : 0;
+    z-index: 10000;
+    width: 100%;
+    /*height : 50px;*/
+    background-color: #eaeaea;
+    border-top: #464545 solid 1px;
+}
+
+.box-bottom-inside
+{
+    /*height: 107px;*/
+    margin-top: -4px;
+    background-color: white;
+}
+
+.box-bottom-inside-table
+{
+    width: 100%;
+    padding: 14px;
+}
+
+.box-bottom-inside-p
+{
+    margin: 0;
+    font-size: larger;
+    font-weight: 700;
+    color: #1f2f62;
+}
+
+.box-bottom-label-left
+{
+    font-size: larger;
+    margin-top: 13px;
+    margin-left: 15px;
+}
+
+.box-bottom-label-right
+{
+    font-size: larger;
+    font-weight: 700;
+    color: #1f2f62;
+    position: absolute;
+    top: 13px;
+    right: 45px;
+}
+
+.box-bottom-icon-down
+{
+    position: absolute;
+    top: 17px;
+    right: 16px;
+}
