--- a/www/css/style.css
+++ b/www/css/style.css
@@ -401,18 +401,30 @@ display: inline-block;
 
 .logo-dreamtour1
 {
+    width: 95%;
+    display: block;
+    margin: auto;
+    margin-top: 34px;
+}
+
+.menu-bar
+{
+    background-color: rgb(31, 47, 98);
+    /*height: 110px;*/
     width: 100%;
-    width: 94%;
-    margin-left: 3%;
-    margin-top: 10%;
+    /*position: absolute;*/
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    box-shadow: 0 10px 5px rgba(56, 52, 52, 0.58);
 }
 
 .menu-bar-2
 {
     background-color: rgb(31, 47, 98);
-    height: 13%;
+    /*height: 13%;*/
     width: 100%;
-    position: absolute;
+    /*position: absolute;*/
     top: 0;
     left: 0;
     z-index: 9999;
@@ -421,38 +433,39 @@ display: inline-block;
 
 .main-padding
 {
-    padding-top: 25%;
+    /*padding-top: 25%;*/
 }
 
 .main-padding-2
 {
-    padding-top: 30%;
+    padding-top: 6%;
 }
 
 .back-button-menu
 {
-    position: absolute;
-    width: 8%;
-    margin-top: 9%;
-    margin-left: 1%;
+    /*position: absolute;
+    width: 8%;*/
+    /*margin-top: 9%;
+    margin-left: 1%;*/
+    color : white;
 }
 
 .label-menu
 {
     color: white;
-    position: absolute;
+    /*position: absolute;
     margin-top: 11.6%;
     margin-left: 10%;
     font-size: 12pt;
-    font-weight: 100;
+    font-weight: 100;*/
 }
 
 .logo-dreamtour-menu
 {
-    position: absolute;
-    width: 50%;
-    margin-top: 10%;
-    right: 2%;
+    /*position: absolute;*/
+    width: 200px;
+    float: right !important;
+    /*right: 2%;*/
 }
 
 .logo-box
