--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -361,3 +361,9 @@ footer {
     margin: 10px 0px 10px 20px;
     font-weight: 600;
 }
+
+.table-volume-icon
+{
+    width: 10%;
+    text-align: center;
+}
