--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -358,7 +358,7 @@ footer {
 
 .sholat-table-p
 {
-    margin: 10px 0px 10px 20px;
+    margin: 10px 0px 10px 10px;
     font-weight: 600;
 }
 
@@ -366,4 +366,17 @@ footer {
 {
     width: 10%;
     text-align: center;
+}
+
+.table-check-icon
+{
+    width: 10%;
+    text-align: center;
+    color: #1f2f62;
+}
+
+.table-time
+{
+    text-align: center;
+    width: 28%;
 }
